--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "react-dom": "16.13.1",
     "remark": "^12.0.1",
     "remark-html": "^12.0.0"
+  },
+  "devDependencies": {
+    "date-fns": "^2.15.0"
   }
 }
