--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "remark-html": "^12.0.0"
   },
   "devDependencies": {
-    "date-fns": "^2.15.0"
+    "date-fns": "^2.15.0",
+    "gray-matter": "^4.0.2"
   }
 }
